--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,6 +23,7 @@ jobs:
           git commit -m "Building Node Modules"
           git push 
           git checkout gh-pages
+          git checkout main
           git merge -s ours gh-pages
           git commit -m "Merge gh-pages"
           git push
