--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,6 +16,8 @@ jobs:
           cache: 'npm'
       - run: |
           npm ci 
+          git config --global user.name 'Dev-Laurin'
+          git config --global user.email 'Dev-Laurin@users.noreply.github.com'
           git add -A
           git commit -m "Building Node Modules"
           git push 
