Try to get node modules working

--- a/_config.yml
+++ b/_config.yml
@@ -34,10 +34,8 @@ theme: minima
 plugins:
   - jekyll-feed
 
-# Pagination
-paginate: 10
-
-include : ["node_modules"]
+include: 
+  - node_modules/
 
 # Exclude from processing.
 # The following items will not be processed, by default.
@@ -47,14 +45,13 @@ include : ["node_modules"]
 # Excluded items can be processed by explicitly listing the directories or
 # their entries' file path in the `include:` list.
 #
-# exclude:
-#   - .sass-cache/
-#   - .jekyll-cache/
-#   - gemfiles/
-#   - Gemfile
-#   - Gemfile.lock
-#   - node_modules/
-#   - vendor/bundle/
-#   - vendor/cache/
-#   - vendor/gems/
-#   - vendor/ruby/
+exclude:
+  - .sass-cache/
+  - .jekyll-cache/
+  - gemfiles/
+  - Gemfile
+  - Gemfile.lock
+  - vendor/bundle/
+  - vendor/cache/
+  - vendor/gems/
+  - vendor/ruby/
