--- a/_config.yml
+++ b/_config.yml
@@ -18,16 +18,14 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Your awesome title
-email: your-email@example.com
+title: Dev-Laurin's portfolio
+email: N/A
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  A website showcasing my work and personal projects.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+url: "https://dev-laurin.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+twitter_username: N/A
+github_username:  Dev-Laurin
 
 # Build settings
 theme: minima
@@ -35,7 +33,8 @@ plugins:
   - jekyll-feed
 
 include: 
-  - node_modules/
+  - node_modules
+  - _includes
 
 # Exclude from processing.
 # The following items will not be processed, by default.
@@ -47,7 +46,7 @@ include:
 #
 exclude:
   - .sass-cache/
-  - .jekyll-cache/
+  - .jekyll-cache
   - gemfiles/
   - Gemfile
   - Gemfile.lock
@@ -55,3 +54,5 @@ exclude:
   - vendor/cache/
   - vendor/gems/
   - vendor/ruby/
+  - package.json
+  - package-lock.json
